--- a/app/src/main/res/drawable/rounded_corner_login.xml
+++ b/app/src/main/res/drawable/rounded_corner_login.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="25dp"/>
-    <stroke android:width="1dip" android:color="@color/white"/>
-    <solid android:color="@color/white"/>
+    <stroke android:width="1dip" android:color="#959CA2"/>
+    <solid android:color="#959CA2"/>
 </shape>
