--- a/app/src/main/res/drawable/rounded_corner_login.xml
+++ b/app/src/main/res/drawable/rounded_corner_login.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <corners android:radius="25dp"/>
     <stroke android:width="1dip" android:color="#959CA2"/>
-    <solid android:color="#959CA2"/>
+    <solid android:color="#C6D4E0"/>
 </shape>
